--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -220,7 +220,7 @@ foreach(DLL_FILE ${CEF_CORE_DLLS})
     copy_file_with_check("${CEF_BINARY_DIR}/${DLL_FILE}" "$<TARGET_FILE_DIR:Nexile>" "${DLL_FILE}")
 endforeach()
 
-# CEF Resource files (.pak and .dat files) - FIXED: Better validation
+# FIXED: CEF Resource files (.pak and .dat files) - Copy from RESOURCE_DIR, not BINARY_DIR
 set(CEF_RESOURCE_FILES
         "cef.pak"
         "cef_100_percent.pak"
@@ -230,7 +230,14 @@ set(CEF_RESOURCE_FILES
 )
 
 foreach(RESOURCE_FILE ${CEF_RESOURCE_FILES})
-    copy_file_with_check("${CEF_BINARY_DIR}/${RESOURCE_FILE}" "$<TARGET_FILE_DIR:Nexile>" "${RESOURCE_FILE}")
+    # FIXED: Look in CEF_RESOURCE_DIR first, then fallback to CEF_BINARY_DIR
+    if(EXISTS "${CEF_RESOURCE_DIR}/${RESOURCE_FILE}")
+        copy_file_with_check("${CEF_RESOURCE_DIR}/${RESOURCE_FILE}" "$<TARGET_FILE_DIR:Nexile>" "${RESOURCE_FILE}")
+    elseif(EXISTS "${CEF_BINARY_DIR}/${RESOURCE_FILE}")
+        copy_file_with_check("${CEF_BINARY_DIR}/${RESOURCE_FILE}" "$<TARGET_FILE_DIR:Nexile>" "${RESOURCE_FILE}")
+    else()
+        message(WARNING "CEF resource file not found: ${RESOURCE_FILE}")
+    endif()
 endforeach()
 
 # CEF Resources directory - FIXED: Conditional copying
@@ -246,17 +253,30 @@ else()
     message(WARNING "CEF Resources directory not found: ${CEF_RESOURCE_DIR}")
 endif()
 
-# CEF Locales directory - FIXED: Conditional copying
-if(EXISTS "${CEF_BINARY_DIR}/locales")
-    add_custom_command(TARGET Nexile POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_directory
-            "${CEF_BINARY_DIR}/locales"
-            "$<TARGET_FILE_DIR:Nexile>/locales"
-            COMMENT "Copying CEF locales"
-            VERBATIM
-    )
-else()
-    message(WARNING "CEF locales directory not found: ${CEF_BINARY_DIR}/locales")
+# FIXED: CEF Locales directory - Check multiple possible locations
+set(CEF_LOCALES_FOUND FALSE)
+set(POSSIBLE_LOCALES_DIRS
+        "${CEF_BINARY_DIR}/locales"
+        "${CEF_ROOT}/locales"
+        "${CEF_RESOURCE_DIR}/locales"
+)
+
+foreach(LOCALES_DIR ${POSSIBLE_LOCALES_DIRS})
+    if(EXISTS "${LOCALES_DIR}" AND IS_DIRECTORY "${LOCALES_DIR}")
+        add_custom_command(TARGET Nexile POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_directory
+                "${LOCALES_DIR}"
+                "$<TARGET_FILE_DIR:Nexile>/locales"
+                COMMENT "Copying CEF locales from ${LOCALES_DIR}"
+                VERBATIM
+        )
+        set(CEF_LOCALES_FOUND TRUE)
+        break()
+    endif()
+endforeach()
+
+if(NOT CEF_LOCALES_FOUND)
+    message(WARNING "CEF locales directory not found in any expected location")
 endif()
 
 # Application HTML resources - FIXED: Validate source files exist
@@ -328,7 +348,37 @@ install(DIRECTORY "${CMAKE_BINARY_DIR}/bin/"
 )
 
 # -----------------------------------------------------------------------------
-# Packaging (optional) - FIXED: Add packaging support
+# FIXED: Create LICENSE file if it doesn't exist
+# -----------------------------------------------------------------------------
+if(NOT EXISTS "${CMAKE_SOURCE_DIR}/LICENSE")
+    file(WRITE "${CMAKE_SOURCE_DIR}/LICENSE"
+            "MIT License
+
+Copyright (c) 2025 Nexile Team
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the \"Software\"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+")
+    message(STATUS "Created LICENSE file")
+endif()
+
+# -----------------------------------------------------------------------------
+# Packaging (optional) - FIXED: Add packaging support with proper license
 # -----------------------------------------------------------------------------
 set(CPACK_PACKAGE_NAME "Nexile")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
